--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "rebus-fr",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Transform french texts to rebus",
   "main": "index.js",
   "bin": "./cli.js",
   "scripts": {
     "test": "node test.js",
-    "start": "node cli.js"
+    "start": "node cli.js",
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,8 @@
   "bugs": {
     "url": "https://github.com/ptlc8/rebus/issues"
   },
-  "homepage": "https://github.com/ptlc8/rebus#readme"
+  "homepage": "https://github.com/ptlc8/rebus#readme",
+  "devDependencies": {
+    "rollup": "^4.39.0"
+  }
 }
