--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "bugs": {
     "url": "https://github.com/ptlc8/rebus/issues"
   },
-  "homepage": "https://github.com/ptlc8/rebus#readme",
+  "homepage": "https://ptlc8.github.io/rebus",
   "devDependencies": {
     "rollup": "^4.39.0"
   }
