--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,5 +1,4 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
+# This workflow will run tests using node and then publish a package to npmjs.com when a v* tag is created
 
 name: Node.js Package
 
@@ -15,18 +14,19 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
-      - name: Vérifier que le tag correspond à la version du package
+          node-version: lts/*
+      - name: Vérifie que le tag correspond à la version du package
         run: |
           TAG_VERSION=${GITHUB_REF##*/}
-          PACKAGE_VERSION="v"$(node -p "require('./package.json').version")
+          PACKAGE_VERSION="v"$(node -p "require('./src/package.json').version")
           echo "Tag: $TAG_VERSION"
           echo "Package.json version: $PACKAGE_VERSION"
           if [ "$TAG_VERSION" != "$PACKAGE_VERSION" ]; then
             echo "::error::Le tag '$TAG_VERSION' ne correspond pas à la version du package '$PACKAGE_VERSION'"
             exit 1
           fi
-      - run: npm test
+      - working-directory: ./src
+        run: npm test
 
   publish-npm:
     needs: test
@@ -35,10 +35,13 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: lts/*
           registry-url: https://registry.npmjs.org/
-      - run: npm ci
-      - run: npm run build
-      - run: npm publish
+      - working-directory: ./src
+        run: npm ci
+      - working-directory: ./src
+        run: npm run build
+      - working-directory: ./src
+        run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
