--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,16 +15,6 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
-      - name: Vérifie que le tag correspond à la version du package
-        run: |
-          TAG_VERSION=${GITHUB_REF##*/}
-          PACKAGE_VERSION="v"$(node -p "require('./src/package.json').version")
-          echo "Tag: $TAG_VERSION"
-          echo "Package.json version: $PACKAGE_VERSION"
-          if [ "$TAG_VERSION" != "$PACKAGE_VERSION" ]; then
-            echo "::error::Le tag '$TAG_VERSION' ne correspond pas à la version du package '$PACKAGE_VERSION'"
-            exit 1
-          fi
       - working-directory: ./src
         run: npm test
 
@@ -37,6 +27,8 @@ jobs:
         with:
           node-version: lts/*
           registry-url: https://registry.npmjs.org/
+      - working-directory: ./src
+        run: npm version from-git --no-git-tag-version
       - working-directory: ./src
         run: npm ci
       - working-directory: ./src
