--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rebus-fr",
-  "version": "1.3.3",
+  "version": "0.0.0",
   "description": "Transform french texts to rebus",
   "type": "module",
   "main": "index.js",
@@ -8,8 +8,7 @@
   "scripts": {
     "test": "node test.js",
     "start": "node cli.js",
-    "build": "rollup -c",
-    "tag": "git tag 'v'$(node -p 'require(\"./package.json\").version')"
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
